k8s/analyticsservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyticsservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyticsservice
  template:
    metadata:
      labels:
        app: analyticsservice
    spec:
      containers:
      - name: analyticsservice
        image: ghcr.io/bsametarman/ratewatch-analyticsservice:latest
        ports:
        - containerPort: 80
