k8s/authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: ghcr.io/bsametarman/ratewatch-authservice:latest
        ports:
        - containerPort: 80
