k8s/dashboardservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboardservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboardservice
  template:
    metadata:
      labels:
        app: dashboardservice
    spec:
      containers:
      - name: dashboardservice
        image: ghcr.io/bsametarman/ratewatch-dashboardservice:latest
        ports:
        - containerPort: 80
