k8s/notificationservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: notificationservice
        image: ghcr.io/bsametarman/ratewatch-notificationservice:latest
        ports:
        - containerPort: 80
