k8s/ratefetcherservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratefetcherservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratefetcherservice
  template:
    metadata:
      labels:
        app: ratefetcherservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: ratefetcherservice
        image: ghcr.io/bsametarman/ratewatch-ratefetcherservice:latest
        ports:
        - containerPort: 80
