k8s/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: ghcr.io/bsametarman/ratewatch-userservice:latest
        ports:
        - containerPort: 80
