k8s/ratefetcherservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratefetcherservice-service
spec:
  selector:
    app: ratefetcherservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
