k8s/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  selector:
    app: userservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
